# Zack-Vision101

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  AUDIT_REPORT_A_PLUS.md  AUDIT_REPORT_PERFECT.md  Dockerfile  FINAL_AUDIT_COMPLETE.md  FINAL_VERIFICATION.md  FIXES_SUMMARY.md  LICENSE  MANIFEST.in  README.md  ULTIMATE_FINAL_CHECK.md  bot.py  config.py  database.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  scheduler.py  setup.py
.github/workflows/: ci.yml
scrapers/: __init__.py  base.py  big_w.py  eb_games.py  jb_hifi.py  kmart.py  target_au.py
src/: __init__.py  config.py  main.py
src/models/: __init__.py  product.py
src/scrapers/: __init__.py  base.py  big_w.py  eb_games.py  jb_hifi.py  kmart.py  target_au.py
src/services/: __init__.py  database.py  dead_letter_queue.py  migrations.py  scheduler.py
src/utils/: __init__.py  health.py  logging_config.py  metrics.py  validation.py
tests/: conftest.py
tests/integration/: test_database.py  test_integration.py
tests/unit/: test_models.py  test_scrapers.py  test_validation.py
